fixed my boxes overflow

--- a/docs/CSSwebsite.css
+++ b/docs/CSSwebsite.css
@@ -9,11 +9,13 @@ p {
     color: #2f3e46;
     font-family: arial, sans-serif;
     font-size: 120%;
+    text-align: left;
+    word-wrap: break-word;
     /*With a border it give the paragraph more of a pop*/
     border-style: solid;
     border-width: 6px;
     border-color: #2f3e46;
-    float:right;
+    overflow: hidden;
     /*Adding the padding to the side allowed me to bring my paragraohs out from huggin the lines*/
     padding-left: 10px;
     padding-right: 12px;
@@ -66,9 +68,14 @@ p {
 img {
     padding-top: 30px;
     padding-right: 30px;
-    float: left;
+    float: right;
+    margin: 0px 0px 15px 20px;
 }
 
+.img-container{
+    text-align: center;
+    display: block;
+}
 /*URL link color*/ 
 a{
     color:fuchsia;
